[tool.poetry]
name = "5e-character-sheet"
version = "0.1.0"
description = ""
authors = ["Alexander Sauceda <alexander@alexandersauceda.dev>"]
readme = "README.md"
packages = [{include = "5e_character_sheet"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
ruff = "^0.1.3"
black = "^23.10.1"
mypy = "^1.6.1"
pytest = "^7.4.3"

[tool.pyright]
include = ["5e_character_sheet"]
venvPath = "/Users/alesauce/Workspace/5e-character-sheet/5e-character-sheet"
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
