[tool.poetry]
name = "dnd-character-sheet"
version = "0.1.0"
description = ""
authors = ["Alexander Sauceda <alexander@alexandersauceda.dev>"]
readme = "README.md"
packages = [{include = "dnd_character_sheet", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
ruff = "^0.1.3"
black = "^23.10.1"
mypy = "^1.6.1"
pytest = "^7.4.3"
pytest-sugar = "^0.9.7"
tox = "^4.11.3"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.pyright]
include = ["5e_character_sheet"]
venvPath = "/Users/alesauce/Workspace/5e-character-sheet/5e-character-sheet"
venv = ".venv"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff.lint]
# All rules below correspond to a ruleset on the Ruff website:
# https://docs.astral.sh/ruff/rules/
# When only one number is supplied after the letter, it acts as a prefix match for
# all rules with that letter/number at the start
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "W291",
  "W293",
  "W505",
  "I",
  "B",
  "SIM",
]
fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
